# Serenity-UAV

./: .gitignore  .liveui.json  CLAUDE.md  COMMS-HAT-SWITCH.kicad_pcb  COMPHAT-SWITCH.kicad_pcb  README.md  TODO.md  cm4-carrier-update.jsx  package.json  serenity-connectivity-revH.jsx  serenity-drone.jsx  serenity-esc-telem-revH1.jsx  serenity-rev-b.jsx  serenity-rev-c.jsx  serenity-rev-d.jsx  serenity-rev-e.jsx  serenity-rev-f.jsx
20200429/: README.md
20200429/serenity-drone/: MANIFEST.json
20260422-Serenity-RevF/: MANIFEST.json
20260422-Serenity-RevF/serenity-drone/: MANIFEST.json
airframe/: antenna-layout.jsx
airframe/nacelles/: nacelle-nozzle-gear.jsx
archives/: COMMS-HAT-SWITCH.kicad_pcb  bom_revH1.json  generate_foam_svgs.py  serenity-rev-b.jsx  serenity-rev-c.jsx  serenity-rev-d.jsx  serenity-rev-e.jsx  serenity-rev-f-.jsx  serenity-rev-f.jsx  tiltrotor-drone.jsx
archives/18in-scale-scad/: s_legs_scaled18.scad
archives/stale-20260601/: README.md  antenna-layout.jsx  cm4-carrier-update.jsx  pico2-hat.jsx
can-obd2-logger/: dtc_db.py  dtc_oem.py  main.py  mcp2515.py  obd2.py  sdcard.py  sdlogger.py
files/: CM4-CARRIER-1.kicad_pcb  COMPHAT-1.kicad_pcb
files/serenity-drone-revF/: README.md
serenity/: MANIFEST.json  package-lock.json  package.json
serenity/artifacts/: antenna-layout.jsx  cm4-carrier-update.jsx  serenity-connectivity-revF.jsx  serenity-connectivity-revG.jsx  serenity-edf-options.jsx  serenity-esc-telem-dual-edf.jsx  serenity-esc-telem-revH1.jsx  serenity-nacelle-pid-governor.jsx  serenity-rev-b.jsx  serenity-rev-c.jsx  serenity-rev-d.jsx  serenity-rev-f.jsx  serenity-rev-g.jsx  serenity-rev-h.jsx  serenity-rev-i.jsx  serenity-rev-j.jsx  serenity-rev-k.jsx  serenity-rev-l.jsx  serenity-rev-m.jsx  serenity-rev-n.jsx  serenity-rev-o.jsx  serenity-rev-p.jsx
serenity/chat/: 2026-04-22-11-20-04-serenity-tiltrotor-drone-design.txt  2026-04-28-14-10-02-serenity-tiltrotor-drone-design.txt  2026-05-03-20-24-05-serenity-tiltrotor-drone-design.txt  journal.txt
serenity/diagrams/: gen_hull_outlines.py  probe_stl.py  update_overview_paths.py
serenity/docs/: AVIONICS_PB2_REDESIGN.md  LICENSE_AND_ATTRIBUTION.md  PHASED_BUILD_GUIDE.md  PROJECT_INDEX.md  PROTO_PRINT_DAVINCI_JR.md  README.md  REVN_BUILD_GUIDE_24IN.md  bom_revH1.json  bom_revI.csv  bom_revI.json  bom_revJ.csv  bom_revJ.json  bom_revK.csv  bom_revK.json  bom_revL.json  bom_revM.json  bom_revN.csv  bom_revN.json  bom_revO.csv  bom_revO.json  bom_revP.csv  bom_revP.json
serenity/firmware/: CMakeLists.txt  README.md
serenity/firmware/cn/: CMakeLists.txt
serenity/firmware/cn/src/: main.c  si5351.c  si5351.h  xcvr_kiss.c  xcvr_kiss.h
serenity/firmware/common/include/: ax25_types.h  kiss_types.h
serenity/firmware/dts/: Makefile  README.md
serenity/firmware/dts/cape-a/: k3-am6254-pocketbeagle2-serenity-cape-a.dts
serenity/firmware/dts/cape-b/: k3-am6254-pocketbeagle2-serenity-cape-b.dts
serenity/firmware/fc/: CMakeLists.txt
serenity/firmware/fc/src/: main.c
serenity/kicad/: CAPE-A-1-no-comment.kicad_pcb  CAPE-A-1-no-comment.kicad_sch  CAPE-A-1.kicad_pcb  CAPE-A-1.kicad_prl  CAPE-A-1.kicad_pro  CAPE-A-1.kicad_sch  CAPE-B-1.kicad_pcb  CAPE-B-1.kicad_prl  CAPE-B-1.kicad_pro  CAPE-B-1.kicad_sch  CAPE-B-1a.kicad_prl  CAPE-B-1a.kicad_pro  CM3-CARRIER-1.kicad_pcb  CM3-CARRIER-1.kicad_sch  CM4-CARRIER-1.kicad_pcb  CM4-CARRIER-1.kicad_sch  CM4-CARRIER-2.kicad_pcb  CM4-CARRIER-2.kicad_sch  COMMS-HAT-1.kicad_pcb  COMMS-HAT-1.kicad_sch  COMMS-HAT-SWITCH.kicad_pcb  COMMS-HAT-SWITCH.kicad_sch  COMPHAT-1.kicad_pcb  COMPHAT-1.kicad_sch  COMPHAT-SWITCH.kicad_pcb  COMPHAT-SWITCH.kicad_sch  SENSORHAT-1.kicad_pcb  SENSORHAT-1.kicad_sch  TRIHAT-1.kicad_pcb  TRIHAT-1.kicad_sch  XCVR-49MHZ-1.kicad_pcb  XCVR-49MHZ-1.kicad_prl  XCVR-49MHZ-1.kicad_pro  XCVR-49MHZ-1.kicad_sch  XCVR-49MHZ-1.md  apply_netlist.py  check_impedance.py  generate_gerbers.py  replace_footprints.py  ~CAPE-A-1.kicad_pcb.lck
serenity/stl/: edf_aft_spider_sleeve.scad  edf_bore_sleeve.scad  edf_stator_sleeve.scad  generate_cargo_doors.py  generate_cargo_mounts.py  hull_aft_neck.stl  nacelle_bevel_housing.scad  nacelle_bevel_pair.scad  nacelle_nozzle_iris.scad  nacelle_pinion.scad  nacelle_pod_50mm_tandem.scad  nacelle_sector_gear.scad  nozzle_inner_ring_40mm.stl  s_aft_edf_plenum.scad  s_cargo_sect_shell24.scad  s_edf_120_motor_mount.scad  s_edf_120_motor_mount.stl  s_edf_120_thrust_tube.scad  s_edf_120_thrust_tube.stl  s_head_shell24.scad  s_middle_canonical_shell24.scad  s_neck_intake_frame.scad  s_rear_neck_intake_shell24.scad  s_wing_nacelle_pylon_revo.scad  s_wings_s1223_revo.scad  (+1 more)
thingverse-serenity/: LICENSE.txt  README.txt  blender_hollow_shells.py  blender_intake_cut.py  blender_nacelle_integrated_v1.py  blender_nacelle_integrated_v2.py  blender_nacelle_revo.py  blender_nozzle_gen.py  blender_shells_v3.py  blender_shells_v3_2mm.py  blender_shells_v3_50mm.py  blender_stator_gen.py  check_nacelle_alignment.py  generate_hollow_shells.py  generate_overview_svgs.py  generate_shells_v2.py  inspect_shell_center.py  repair_shells_for_scad.py
(+252 files in other folders)
